--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 <h1> About Me</h1>
 <h1><p>My name is Robert Selzler and I'm from Genesee Idaho</p></h1>
-p><a href="https://steamcommunity.com/profiles/76561199740818984/">My Steam Account</a></p>
+<a href="https://steamcommunity.com/profiles/76561199740818984/">My Steam Account</a></p>
 <p><a href="\hyperlinks\aboutme.html">About Me</a></p>
 <a href="robert.selzler@malad.us">My Email</a>
 <h2 id="B1">Bookmark</h2>
