--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <h1> About Me</h1>
 <h1><p>My name is Robert Selzler and I'm from Genesee Idaho</p></h1>
 <a href="https://steamcommunity.com/profiles/76561199740818984/">My Steam Account</a></p>
-<p><a href="\hyperlinks\aboutme.html">About Me</a></p>
+<p><a href="https://rjeatsramen.github.io/aboutme/">About Me</a></p>
 <a href="robert.selzler@malad.us">My Email</a>
 <h2 id="B1">Bookmark</h2>
 <a href="#B1">Bookmark Link</a>
